; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/video_layout/extr_load.c_init_screen_params.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/video_layout/extr_load.c_init_screen_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@video_layout_internal_screen_params = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @init_screen_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_screen_params(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [64 x i8], align 16
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  store i64 0, i64* %6, align 8
  br label %7

7:                                                ; preds = %31, %2
  %8 = load i64, i64* %6, align 8
  %9 = load i32*, i32** @video_layout_internal_screen_params, align 8
  %10 = call i64 @ARRAY_SIZE(i32* %9)
  %11 = icmp ult i64 %8, %10
  br i1 %11, label %12, label %34

12:                                               ; preds = %7
  %13 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %14 = load i32*, i32** @video_layout_internal_screen_params, align 8
  %15 = load i64, i64* %6, align 8
  %16 = add i64 %15, 1
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @strcpy(i8* %13, i32 %18)
  %20 = load i32, i32* %4, align 4
  %21 = add nsw i32 48, %20
  %22 = trunc i32 %21 to i8
  %23 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 3
  store i8 %22, i8* %23, align 1
  %24 = load i32*, i32** %3, align 8
  %25 = load i32*, i32** @video_layout_internal_screen_params, align 8
  %26 = load i64, i64* %6, align 8
  %27 = getelementptr inbounds i32, i32* %25, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %30 = call i32 @scope_param(i32* %24, i32 %28, i8* %29)
  br label %31

31:                                               ; preds = %12
  %32 = load i64, i64* %6, align 8
  %33 = add i64 %32, 2
  store i64 %33, i64* %6, align 8
  br label %7

34:                                               ; preds = %7
  ret void
}

declare dso_local i64 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @strcpy(i8*, i32) #1

declare dso_local i32 @scope_param(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
